[project]
name = "zyte-mmr-puller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.11.3",
    "requests>=2.33.1",
    "zyte-api>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-async>=0.1.1",
    "python-dotenv>=1.2.2",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
